Nuevas plantillas de correos

--- a/emails/templates/reservReqDenied.html
+++ b/emails/templates/reservReqDenied.html
@@ -33,15 +33,19 @@
         margin-bottom: 20px;"
     >
 
-        <p style="margin: 0px; font-family: 'Karla', sans-serif;">
-            {{mensaje}}
+        <h3 style="font-family: 'Karla', sans-serif; margin-top: 0px;">
+            Tu solicitud de reserva ha sido denegada
+        </h3>
+
+        <p style="font-family: 'Karla', sans-serif;">
+            Desafortunadamente, ha habido demasiadas solicitudes para espacio en la sala {{sala}} 
+            para el día {{fecha}} de {{horaInicio}} a {{horaFin}}.
         </p>
 
-        <h3 style="margin-bottom: 0px; font-family: 'Karla', sans-serif;">
-            Motivo:
-        </h3>
-        <p style="margin-bottom: 0px; margin-top: 5px; font-family: 'Karla', sans-serif;">
-            {{motivo}}
+        <p style="font-family: 'Karla', sans-serif;">
+            Porfavor, siéntete libre hacer otra solicitud en un espacio con menos demanda 
+            y recuerda que cumplir con logros en la página y con los códigos de conducta del 
+            DREAM Lab te dará puntos de prioridad para tus próximas solicitudes.
         </p>
 
         <p style="margin-bottom: 0px; font-family: 'Karla', sans-serif;">
