--- a/emails/templates/reservReqAccepted.html
+++ b/emails/templates/reservReqAccepted.html
@@ -33,15 +33,16 @@
         margin-bottom: 20px;"
     >
 
-        <p style="margin: 0px; font-family: 'Karla', sans-serif;">
-            {{mensaje}}
+        <h3 style="font-family: 'Karla', sans-serif; margin-top: 0px;">
+            Tu solicitud de reserva ha sido aceptada
+        </h3>
+
+        <p style="font-family: 'Karla', sans-serif;">
+            Se te ha asignado el espacio solicitado en la sala {{sala}} para el día {{fecha}} de {{horaInicio}} a {{horaFin}}.
         </p>
 
-        <h3 style="margin-bottom: 0px; font-family: 'Karla', sans-serif;">
-            Motivo:
-        </h3>
-        <p style="margin-bottom: 0px; margin-top: 5px; font-family: 'Karla', sans-serif;">
-            {{motivo}}
+        <p style="font-family: 'Karla', sans-serif;">
+            Porfavor sé puntual y cuida el equipo de las instalaciones.
         </p>
 
         <p style="margin-bottom: 0px; font-family: 'Karla', sans-serif;">
