--- a/emails/templates/reminder1dayBefore.html
+++ b/emails/templates/reminder1dayBefore.html
@@ -19,7 +19,7 @@
         <img 
         src="https://dreamlabstorage.blob.core.windows.net/email-templates/Logo%20Negro%20con%20Borde%20Blanco.png" 
         style="height: 30px; width: 30px; padding-right: 7px;">
-        <h2 style="font-family: 'Karla', sans-serif; letter-spacing: -0.5px;">Dream Lab</h2>
+        <h2 style="font-family: 'Karla', sans-serif; letter-spacing: -0.5px;">DREAM Lab</h2>
     </div>
     
 
