--- a/emails/templates/reservReqAccepted.html
+++ b/emails/templates/reservReqAccepted.html
@@ -19,7 +19,7 @@
         <img 
         src="https://dreamlabstorage.blob.core.windows.net/email-templates/Logo%20Negro%20con%20Borde%20Blanco.png" 
         style="height: 30px; width: 30px; padding-right: 7px;">
-        <h2 style="font-family: 'Karla', sans-serif; letter-spacing: -0.5px;">Dream Lab</h2>
+        <h2 style="font-family: 'Karla', sans-serif; letter-spacing: -0.5px;">DREAM Lab</h2>
     </div>
     
 
@@ -38,7 +38,7 @@
         </h3>
 
         <p style="font-family: 'Karla', sans-serif;">
-            Se te ha asignado el espacio solicitado en la sala {{sala}} para el día {{fecha}} de {{horaInicio}} a {{horaFin}}.
+            Se te ha asignado el espacio solicitado para {{numPersonas}} personas en la sala {{sala}} para el día {{fecha}} de {{horaInicio}} a {{horaFin}}.
         </p>
 
         <p style="font-family: 'Karla', sans-serif;">
