Cambios en servicio de correos

--- a/emails/templates/reminder2hrsBefore.html
+++ b/emails/templates/reminder2hrsBefore.html
@@ -38,11 +38,11 @@
         </h3>
 
         <p style="font-family: 'Karla', sans-serif;">
-            Tu reservación en la sala {{sala}} para el día {{fecha}} de {{horaInicio}} a {{horaFin}}. es en 2 horas
+            Tu reservación en la sala {{sala}} para el día {{fecha}} de {{horaInicio}} a {{horaFin}} es en 2 horas
         </p>
 
         <p style="font-family: 'Karla', sans-serif;">
-            Porfavor sé puntual y cuida el equipo de las instalaciones.
+            Por favor sé puntual y cuida el equipo de las instalaciones.
         </p>
 
         <p style="margin-bottom: 0px; font-family: 'Karla', sans-serif;">
