--- a/emails/templates/obtenerNuevoLogro.html
+++ b/emails/templates/obtenerNuevoLogro.html
@@ -53,6 +53,7 @@
                         margin: 0px;
                         font-family: 'Karla', sans-serif;
                         font-size: 28px;
+                        font-weight: bold;
                     "
                 >
                     {{logro}}
@@ -89,6 +90,7 @@
                         margin: 0px;
                         font-family: 'Karla', sans-serif;
                         font-size: 14px;
+                        font-style: italic;
                     "
                 >
                     Incremento de puntos de prioridad
