Actualizar template con firma

--- a/emails/templates/obtenerNuevoLogro.html
+++ b/emails/templates/obtenerNuevoLogro.html
@@ -101,10 +101,14 @@
                 ¡Te invitamos a visitar tu perfil en
                 <a
                     href="https://www.dreamlab.world/profile"
-                    style="color: #007bff; text-decoration: none"
+                    style="color: #56bd86; text-decoration: none"
                     >https://www.dreamlab.world/profile</a
                 >
                 para más información!
+            </p>
+
+            <p style="margin-bottom: 0px; font-family: 'Karla', sans-serif">
+                Sigue soñando, <span style="font-weight: bold">DREAM Lab</span>
             </p>
         </div>
     </body>
