--- a/emails/templates/updatedPriorityPoints.html
+++ b/emails/templates/updatedPriorityPoints.html
@@ -44,6 +44,13 @@
             {{motivo}}
         </p>
 
+        <p style="margin-bottom: 0px; margin-top: 10px; font-family: 'Karla', sans-serif;">
+            Los puntos de prioridad son parte del sistema de asignación de reservaciones con el que cuenta la 
+            aplicación del DREAM Lab. Estos puntos hacen que tengas preferencia al momento en que las solicitudes
+            creadas en un periodo de tiempo se confirmen o se nieguen. También puedes cumplir con logros 
+            en la página y con los códigos de conducta del DREAM Lab para obtener más puntos de prioridad.
+        </p>
+
         <p style="margin-bottom: 0px; font-family: 'Karla', sans-serif;">
             Sigue soñando,
         </p>
